<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.3" />

            <TextView
                android:id="@+id/user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/flickdemo_vmryl"
                android:letterSpacing="0.4"
                android:text="@string/user_form"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_box"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_form" />

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/age"
                android:inputType="number"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/birthdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/birthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/birthdate"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/sex"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="City"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Replacing Spinner with AutoCompleteTextView for country -->
            <AutoCompleteTextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="Country"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Replacing Spinner with AutoCompleteTextView for zip code -->
            <AutoCompleteTextView
                android:id="@+id/zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="Zip Code"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/zipcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/register"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
